css/app.css
/* FONT */

body{
    font-family: 'Roboto', sans-serif;
    font-size: small;
}

/* RESET */

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

img {
	max-width: 100%;
}

a {
	text-decoration: none;
	color: currentColor;
}

menu,
ul,
ol {
	list-style: none;
}

/* LAYOUT */

.container{
    margin: 0 auto;
    max-width: 1024px;
}

.row{
    display: flex;
    flex-wrap: wrap;
}

.col-4{
    width: calc(3 * 100% /12);
}

.col-3{
    max-width: 160px;
}

.col-2{
    max-height: 50px;
}

/* UTILITY */

.color__red{
    color: red;
}

.color__white{
    color: white;
}

.font-size-20{
    font-size: 20px;
}

/* STYLE */

main .row{
    gap: 15px;
    justify-content: center;
}

header .row{
    justify-content: space-between;
    align-items: center;
}

.bg__header{
    background-color: #FF6900;
}

.bg__footer{
    background-color: black;
    padding: 20px 0px;
}

.badge{
    background-color: red;
    padding: 3px 10px;
}

.sustainability{
    background-color: green;
    padding: 3px 10px;
}

.card__header{
    position: relative;
}

.card__header .badge, .card__header .sustainability, .card__header .favorites{
    position: absolute;
}

.card__header > img {
	display: block;
}

.card__header .badge{
    bottom: 20px;
    z-index: 1;
}

.card__header .sustainability{
    bottom: 20px;
    left:55px;
    z-index: 1;
}

.card__header .favorites{
    background-color: white;
    padding: 5px 10px;
    line-height: 30px;
    font-size: 30px;
    right: 0;
    top: 10px;
    z-index: 1;
}

.sustainability.layout__dif{
    left: 0;
}

main .container{
    padding-top: 30px;
    padding-bottom: 30px;
}

header .container{
    padding: 10px 0;
}

.status{
    line-height: 30px;
}

a{
    padding-right: 5px;
}

footer .row{
    justify-content: space-between;    
}

/* HOVER */

.img__hover{
    position: absolute;
    top: 0;
    right: 0;
}

.card .img__hover{
    opacity: 0;
}

.card:hover .img__hover{
    opacity: 1;
}

